[package]
name = "tikis"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_ecs = "0.10.0"
bevy_math = "0.10.0"
bracket-color = "0.8.7"
bracket-terminal = "0.8.7"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "io_benches"
harness = false
